# AITuberFlow

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Makefile  README.en.md  README.ja.md  README.md  SECURITY.en.md  SECURITY.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
LICENSES/: THIRD_PARTY.md
apps/server/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/server/db/: database.py
apps/server/engine/: event_bus.py  executor.py
apps/server/integrations/: __init__.py  vtube_studio.py
apps/server/models/: workflow.py
apps/server/routers/: integrations.py  plugins.py  templates.py  workflows.py
apps/server/state/: character.py  stream.py
apps/web/: .dockerignore  CLAUDE.md  CLOUDFLARE_DEPLOY.md  Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json
docs/: api-reference.ja.md  api-reference.md  architecture.ja.md  architecture.md  getting-started.ja.md  getting-started.md
plugins/: CLAUDE.md  categories.json
plugins/anthropic-llm/: manifest.json  node.py
plugins/audio-player/: manifest.json  node.py
plugins/avatar-configuration/: manifest.json  node.py
plugins/avatar-controller/: manifest.json  node.py
plugins/avatar-display/: manifest.json  node.py
plugins/coeiroink-tts/: manifest.json  node.py
plugins/console-output/: manifest.json  node.py
plugins/data-formatter/: manifest.json  node.py
plugins/delay/: manifest.json  node.py
plugins/discord-chat/: manifest.json  node.py
plugins/donation-alert/: manifest.json  node.py
plugins/emotion-analyzer/: manifest.json  node.py
plugins/end/: manifest.json  node.py
plugins/foreach/: manifest.json  node.py
plugins/google-llm/: manifest.json  node.py
plugins/http-request/: manifest.json  node.py
plugins/lip-sync/: manifest.json  node.py
plugins/loop/: manifest.json  node.py
plugins/manual-input/: manifest.json  node.py
plugins/motion-trigger/: manifest.json  node.py
plugins/obs-scene-switch/: manifest.json  node.py
plugins/obs-source-toggle/: manifest.json  node.py
plugins/ollama-llm/: manifest.json  node.py
plugins/openai-llm/: manifest.json  node.py
scripts/: create_node.py  migrate_manifests.py
templates/: avatar-vtuber-advanced.json  avatar-vtuber.json  basic-chat.json  http-api-call.json  loop-counter.json  multi-llm.json  simple-vtuber.json  streaming-vtuber.json  text-processor.json  twitch-vtuber.json  voice-chatbot.json  vtube-studio-vtuber.json  youtube-vtuber.json
(+64 files in other folders)
