[project]
name = "aituber-flow-server"
version = "0.1.0"
description = "AITuberFlow Backend Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "python-socketio>=5.11.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
obs = [
    "obsws-python>=1.7.0",  # OBS WebSocket control (GPL-2.0 license)
]
all = [
    "obsws-python>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]
