[project]
name = "aituber-flow-server"
version = "1.0.0"
description = "AITuberFlow Backend Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "python-socketio>=5.11.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "websockets>=16.0",
]

[project.optional-dependencies]
obs = [
    "obsws-python>=1.7.0",  # OBS WebSocket control (GPL-2.0 license)
]
all = [
    "obsws-python>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
# Allow implicit Optional for now (can be tightened later)
implicit_optional = true
# Disable strict checks that require full type annotations
check_untyped_defs = false
disallow_untyped_defs = false
# Ignore errors in generated/complex code
disable_error_code = ["assignment", "union-attr", "valid-type", "misc", "var-annotated", "return-value", "attr-defined", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests"]
